=== Bucket4j {revnumber} release notes
Release `{revnumber}`

==== The bugfixes in release scope are following:
* https://github.com/bucket4j/bucket4j/issues/501[#501 Wrong behavior of batching optimization]