@@ -1,10 +1,10 @@
 == Documentation for previous versions
 === 2024
-==== 8.13.0
+==== 8.13.1
 Release date: `07 June 2024`
 
-* http://bucket4j.com/8.13.0/release-notes.html[8.13.0 Release notes]
-* http://bucket4j.com/8.13.0/toc.html[8.13.0 Reference]
+* http://bucket4j.com/8.13.0/release-notes.html[8.13.1 Release notes]
+* http://bucket4j.com/8.13.0/toc.html[8.13.1 Reference]
 
 ==== 8.12.1
 Release date: `01 May 2024`
